Add documentaion (swagger) for some API endpoints
